Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
qpid-cpp-1.35.0
-
None
-
Windows SChannel
Description
From the user list (acartcat Cartwright_Andrew@cat.com):
> I get the following error in the broker, looks like the same error as
> QPID-5033.
[...]
> 2016-05-26 05:22:23 [System] error No IO buffers available: getQueuedBuffer
> with empty queue. Debug data: 0 1 0 3 0 0 1
[...]
> This can be triggered on demand using:
> qpid-send -b ssl:XXXXXXXX.com:5671 --connection-options
> -a testerq --content-string=hello --messages 200
In my testing, qpid-send must also be Windows based. I do not see the error
if it is sent from a client running on Linux.
This error is caused by the SChannel driver generating (valid but
useless) empty SSL packets when a zero length write is requested from
the codec on the client side. On the server side, these are
processed and empty read callbacks are generated, even after close.
The WSAENOBUFS happens as a side effect of recursive calls to
sslDataIn while processing adjacent empty packets.