QPID-7393: fix windows SslAsynchIO to not generate but also ignore empty SSL packets